--- a/studio/package.json
+++ b/studio/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "discordcloneblockchain",
+  "name": "utkrisht",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "David Rakosi <drakosi@icloud.com>",
+  "author": "Rishabh <rishabhpant14@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "sanity start",
+    "start": "start",
     "build": "sanity build"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.27.0",
-    "@sanity/core": "^2.27.0",
-    "@sanity/default-layout": "^2.27.0",
-    "@sanity/default-login": "^2.27.0",
-    "@sanity/desk-tool": "^2.27.0",
+    "@sanity/base": "^2.33.0",
+    "@sanity/core": "^2.33.0",
+    "@sanity/default-layout": "^2.33.0",
+    "@sanity/default-login": "^2.33.0",
+    "@sanity/desk-tool": "^2.33.0",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.27.0",
+    "@sanity/vision": "^2.33.0",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
     "react": "^17.0",
